[gd_scene load_steps=7 format=3 uid="uid://dcvkmf2xif1lh"]

[ext_resource type="Script" uid="uid://bewiv5ciy610m" path="res://assets/Scripts/ItemData.gd" id="2_8yjuq"]
[ext_resource type="Script" uid="uid://d4ailarrwoeop" path="res://coin.gd" id="2_m5i3c"]
[ext_resource type="PlaneMesh" uid="uid://drower2q1nw0t" path="res://assets/Images/area_3d.tres" id="3_cefeg"]

[sub_resource type="GDScript" id="GDScript_8yjuq"]
script/source = "extends Area3D
class_name CollectibleCoin

const ROT_SPEED = 120.0 # Vitesse en degrés par seconde (j'ai mis 120 pour que ce soit visible)

# Variable ESSENTIELLE : Permet de glisser la ressource 'piece_dor.tres' dans l'Inspecteur
@export var item_data: ItemData 


func _ready() -> void:
	# Assurez-vous d'avoir bien connecté le signal body_entered de votre Area3D 
	# soit manuellement dans l'éditeur (Onglet 'Nœud'), soit par code comme ici:
	if not body_entered.is_connected(_on_body_entered):
		body_entered.connect(_on_body_entered)


func _process(delta: float) -> void:
	# Utilisation de delta pour une rotation indépendante du framerate
	rotate_y(deg_to_rad(ROT_SPEED * delta))


func _on_body_entered(body: Node3D) -> void:
	# On vérifie si le corps entrant est une instance de votre CharacterBody3D
	if body is CharacterBody3D:
		var character_script = body as CharacterBody3D
		
		# 1. On tente de ramasser l'objet en appelant la fonction du joueur.
		# On lui passe la ressource de donnée que nous avons chargée via l'Inspecteur.
		var picked_up = character_script.pick_up_item(item_data)
		
		# 2. Si la fonction renvoie VRAI (l'objet a été ajouté)
		if picked_up:
			# On détruit la pièce du monde 3D
			queue_free() 
		# Si 'picked_up' est FAUX, cela signifie que l'inventaire est plein, 
		# donc on ne détruit pas la pièce (elle reste au sol).
"

[sub_resource type="Resource" id="Resource_d2ffh"]
script = ExtResource("2_8yjuq")
metadata/_custom_type_script = "uid://bewiv5ciy610m"

[sub_resource type="BoxShape3D" id="BoxShape3D_i7uj0"]
size = Vector3(2.3522644, 0.4975586, 2.3340454)

[node name="Recuperable" type="Area3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 1.0233332, 0)
script = SubResource("GDScript_8yjuq")
item_data = SubResource("Resource_d2ffh")

[node name="CollectibleCoin" type="Area3D" parent="."]
script = ExtResource("2_m5i3c")
metadata/_custom_type_script = "uid://d4ailarrwoeop"

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollectibleCoin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.16845798, 0)
mesh = ExtResource("3_cefeg")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollectibleCoin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0034811087, 0.013679862, -0.19104719)
shape = SubResource("BoxShape3D_i7uj0")
